--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,11 +4,12 @@ pipeline {
         stage('Build') {
             agent {
                 docker {
-                    image 'python:2-alpine'
+                    image 'python:3.12.1-alpine3.19'
                 }
             }
             steps {
                 sh 'python -m py_compile sources/add2vals.py sources/calc.py'
+                stash(name: 'compiled-results', includes: 'sources/*.py*') 
             }
         }
         stage('Test') {
